agoris ChangeLog
-=-=-=-=-=-=-=-=

Sat Jul 28 12:57:06 CEST 2001  Andreas Bauer <baueran@users.berlios.de>

 * The search algorithms now use proper values for infinity unlike
   the last commits since version 0.0.1 in which I accidently
   got this bug in


Wed Jul 25 17:03:55 CEST 2001  Andreas Bauer <baueran@users.berlios.de>

 * Changed all static piece values into methods in Board.cc

 * Added Timer.cc and Timer.hh

 * Fixed agoris/Makefile.am
 
 * Fixed up header files, so they can be included several times (oops)

 * Fixed up piece safety evaluation in Eval.cc


Sun Jul 22 21:57:54 CEST 2001  Andreas Bauer <baueran@users.berlios.de>

 * Added alpha-beta pruning to Search.cc


Sat Jul 21 15:54:54 CEST 2001  Andreas Bauer <baueran@users.berlios.de>

 * Added castling moves


Fri Jul 20 21:17:49 CEST 2001  Andreas Bauer <baueran@users.berlios.de>
 
 * Added pawn promotions to the Board.cc and Eval.cc


Thu Jul 19 11:38:21 CEST 2001  Andreas Bauer <baueran@users.berlios.de>

 * Added proper Doxygen source code documentation

 * Seperated rule checking from move generation

 * Added README, NEWS and ChangeLog to repository

 * Added rule checking to Game.cc which should only be used to check
   human players! Otherwise it's too time consuming.