@@ -1,5 +1,5 @@
 dnl configure.in: Autoconfigure input file for agoris 
-dnl $Id: configure.in,v 1.2 2001/07/25 15:07:27 baueran Exp $
+dnl $Id: configure.in,v 1.3 2001/08/01 20:47:41 baueran Exp $
 dnl
 dnl Copyright (c) 2001  Andreas Bauer <baueran@in.tum.de>
 dnl  
@@ -25,9 +25,9 @@ dnl distribution terms that you use for the rest of that program.
 dnl  
 
 
-AC_REVISION($Revision: 1.2 $)
+AC_REVISION($Revision: 1.3 $)
 AC_INIT(agoris/Board.cc)
-AM_INIT_AUTOMAKE(agoris, 0.0.1)
+AM_INIT_AUTOMAKE(agoris, 0.0.2)
 AM_MAINTAINER_MODE
 AM_ACLOCAL_INCLUDE(macros)
 AM_CONFIG_HEADER(config.h)
