@@ -1,6 +1,12 @@
 agoris ChangeLog
 -=-=-=-=-=-=-=-=
 
+Wed Aug  1 22:28:51 CEST 2001  Andreas Bauer <baueran@users.berlios.de>
+ 
+ * Fixed MiniMax algorithm to _really_ select the move with the best
+   score
+
+
 Sat Jul 28 12:57:06 CEST 2001  Andreas Bauer <baueran@users.berlios.de>
 
  * The search algorithms now use proper values for infinity unlike
